--- a/src/app/auth-panel/login/login.component.html
+++ b/src/app/auth-panel/login/login.component.html
@@ -6,10 +6,10 @@
         <h5>Please Sign in to continue</h5>
       </div>
       <div class="form">
-          <ion-input labelPlacement="stacked" label="Enter your username">
+          <ion-input labelPlacement="stacked" label="Enter your username" [(ngModel)]="username">
             <ion-icon name="person" slot="start"></ion-icon>
           </ion-input>
-          <ion-input labelPlacement="stacked" label="Enter your password">
+          <ion-input labelPlacement="stacked" label="Enter your password" [(ngModel)]="password">
             <ion-icon slot="start" name="lock-closed" aria-hidden="true"></ion-icon>
             <ion-button fill="clear" slot="end" aria-label="Show/hide">
               <ion-icon slot="icon-only" name="eye" aria-hidden="true"></ion-icon>
@@ -17,7 +17,7 @@
           </ion-input>
       </div>  
       <span routerLink="/auth/email-verify">Forgot Password?</span><br>
-      <ion-button expand="block" shape="round" routerLink="/home">Login</ion-button>
+      <ion-button expand="block" shape="round" (click)="onSubmit()">Login</ion-button>
       <p>Don't have account?  <a routerLink="/auth/registration">Sign up</a></p>
     </div>
 </ion-content>
